--- a/apollo-graphql-express-server-data-sources/package.json
+++ b/apollo-graphql-express-server-data-sources/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apollo-graphql-express-server-chain",
+  "name": "apollo-graphql-express-server-data-sources",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-mongodb": "^0.5.2",
     "apollo-server-express": "^3.6.2",
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "mongoose": "^6.1.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
