--- a/graphql-realworld/package.json
+++ b/graphql-realworld/package.json
@@ -17,12 +17,14 @@
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/uuid": "^8.3.4",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
