--- a/graphql-realworld/package.json
+++ b/graphql-realworld/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.1",
+    "@graphql-tools/utils": "^8.6.1",
     "apollo-datasource-mongodb": "^0.5.2",
     "apollo-server-express": "^3.6.2",
     "axios": "^0.25.0",
@@ -17,6 +19,7 @@
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "graphql-tools": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "uuid": "^8.3.2"
